--- a/proyecto-frontend/package.json
+++ b/proyecto-frontend/package.json
@@ -14,6 +14,7 @@
     "react-hook-form": "^7.45.2",
     "react-i18next": "^13.0.2",
     "react-router-dom": "^6.14.2",
+    "react-router-hash-link": "^2.4.3",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4",
     "yup": "^1.2.0"
