--- a/proyecto-frontend/package.json
+++ b/proyecto-frontend/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://EricMartinezIllamola.github.io",
+  "homepage": "https://EricMartinezIllamola.github.io/CV",
   "name": "proyecto-frontend",
   "version": "0.1.0",
   "private": true,
