--- a/proyecto-frontend/package.json
+++ b/proyecto-frontend/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://EricMartinezIllamola.github.io/CV",
+  "homepage": "https://EricMartinezIllamola.github.io",
   "name": "proyecto-frontend",
   "version": "0.1.0",
   "private": true,
@@ -9,6 +9,7 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "gh-pages": "^5.0.0",
     "i18next": "^23.4.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
